# pr-assistant-deepagents

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
scripts/: simulate_github_action.sh
scripts/agent/: register_agent.py  unregister_agent.py
scripts/github/: 01-setup-environment.sh  02-prefetch-data.sh  03-run-review.sh  post-failure-comment.sh  pr-assistant.yml
src/pr_assistant/: __init__.py  main.py
src/pr_assistant/agents/: agent_config.py  registry.json
src/pr_assistant/agents/core/: footer.py  github_client.py  llm_factory.py  streaming.py
src/pr_assistant/agents/core/base_agent/: base_comment_replier.py  base_reviewer.py  reply_prompt.md  review_prompt.md
src/pr_assistant/agents/core/comment_router/: agent.py  route_prompt.md
src/pr_assistant/agents/weather_forcast/: comment_replier_agent.py  reviewer_agent.py
src/pr_assistant/agents/weather_forcast/docs/: REVIEW_GUIDELINES.md  ROLE.md
tests/: test_detect_platform.py  test_local_llm.py  test_parse_comment_url.py
